--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
               <span>
-                <img src="A:\SWABI-HTML\images\swabi logo.jpg" alt="" width="150" length="130" >
+                <img src="swabi logo.jpg" alt="" width="150" length="130" >
                 <b>SWABI TRANSPORT</b>
               </span>
             </a>
