--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="tel:0525629048">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +971525629048
+                Call : +971-525629048
               </span>
             </a>
             <a href="mailto:sales.swabitransport@gmail.com">
