--- a/service.html
+++ b/service.html
@@ -69,8 +69,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
               <span>
-                <img src="A:\Swabi transport final code\SWABI-HTML\images\swabi logo.jpg" alt="" width="150" length="130" >
-                <b>SWABI TRANSPORT</b>
+                <img src="images\swabi logo.jpg" alt="" width="150" length="130" >
               </span>
             </a>
 
