--- a/contact.html
+++ b/contact.html
@@ -70,8 +70,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
               <span>
-                <img src="A:\Swabi transport final code\carint-html\images\swabi logo.jpg" alt="" width="150" length="130" >
-                <b>SWABI TRANSPORT</b>
+                <img src="images\swabi logo.jpg" alt="" width="180" length="150" >
               </span>
             </a>
 
