--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
               <span>
-                <img src="A:\Swabi transport final code\carint-html\images\swabi logo.jpg" alt="" width="150" length="130" >
+                <img src="images\swabi logo.jpg" alt="" width="180" length="150" >
                 <b>SWABI TRANSPORT</b>
               </span>
             </a>
