--- a/service.html
+++ b/service.html
@@ -106,7 +106,7 @@
     <!-- slider section -->
     <section class="slider_section ">
       <div class="slider_bg_box">
-        <img src="A:\Swabi transport final code\SWABI-HTML\images\row containers.jpg" alt="">
+        <img src="images\row containers.jpg" alt="">
       </div>
       <div id="customCarousel1" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
